--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -11,7 +11,6 @@ $blue: #3490dc;
 $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66d9b;
-$red: #be1c16;
 $orange: #f6993f;
 $yellow: #ffed4a;
 $green: #38c172;
@@ -33,6 +32,7 @@ $header: #90a7901d;
 $footer: #252525b3;
 
 $admin-btn-color: #535353;
+$red: #810c0c;
 
 body {
     margin: 0;
