--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19,7 +19,7 @@ body {
   --indigo: #6574cd;
   --purple: #9561e2;
   --pink: #f66d9b;
-  --red: #be1c16;
+  --red: #810c0c;
   --orange: #f6993f;
   --yellow: #ffed4a;
   --green: #38c172;
@@ -33,7 +33,7 @@ body {
   --success: #38c172;
   --info: #6cb2eb;
   --warning: #ffed4a;
-  --danger: #be1c16;
+  --danger: #810c0c;
   --light: #f8f9fa;
   --dark: #343a40;
   --breakpoint-xs: 0;
@@ -1944,23 +1944,23 @@ pre code {
 .table-danger,
 .table-danger > th,
 .table-danger > td {
-  background-color: #edbfbe;
+  background-color: #dcbbbb;
 }
 
 .table-danger th,
 .table-danger td,
 .table-danger thead th,
 .table-danger tbody + tbody {
-  border-color: #dd8986;
+  border-color: #bd8181;
 }
 
 .table-hover .table-danger:hover {
-  background-color: #e7abaa;
+  background-color: #d3aaaa;
 }
 
 .table-hover .table-danger:hover > td,
 .table-hover .table-danger:hover > th {
-  background-color: #e7abaa;
+  background-color: #d3aaaa;
 }
 
 .table-light,
@@ -2450,7 +2450,7 @@ textarea.form-control.is-valid {
   width: 100%;
   margin-top: 0.25rem;
   font-size: 80%;
-  color: #be1c16;
+  color: #810c0c;
 }
 
 .invalid-tooltip {
@@ -2465,7 +2465,7 @@ textarea.form-control.is-valid {
   font-size: 0.7875rem;
   line-height: 1.6;
   color: #fff;
-  background-color: rgba(190, 28, 22, 0.9);
+  background-color: rgba(129, 12, 12, 0.9);
   border-radius: 0.25rem;
 }
 
@@ -2483,9 +2483,9 @@ textarea.form-control.is-valid {
 
 .was-validated .form-control:invalid,
 .form-control.is-invalid {
-  border-color: #be1c16;
+  border-color: #810c0c;
   padding-right: calc(1.6em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23be1c16' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23be1c16' stroke='none'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23810c0c' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23810c0c' stroke='none'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.4em + 0.1875rem) center;
   background-size: calc(0.8em + 0.375rem) calc(0.8em + 0.375rem);
@@ -2493,8 +2493,8 @@ textarea.form-control.is-valid {
 
 .was-validated .form-control:invalid:focus,
 .form-control.is-invalid:focus {
-  border-color: #be1c16;
-  box-shadow: 0 0 0 0.2rem rgba(190, 28, 22, 0.25);
+  border-color: #810c0c;
+  box-shadow: 0 0 0 0.2rem rgba(129, 12, 12, 0.25);
 }
 
 .was-validated textarea.form-control:invalid,
@@ -2505,20 +2505,20 @@ textarea.form-control.is-invalid {
 
 .was-validated .custom-select:invalid,
 .custom-select.is-invalid {
-  border-color: #be1c16;
+  border-color: #810c0c;
   padding-right: calc(0.75em + 2.3125rem);
-  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") right 0.75rem center/8px 10px no-repeat, #fff url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23be1c16' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23be1c16' stroke='none'/%3e%3c/svg%3e") center right 1.75rem/calc(0.8em + 0.375rem) calc(0.8em + 0.375rem) no-repeat;
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") right 0.75rem center/8px 10px no-repeat, #fff url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23810c0c' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23810c0c' stroke='none'/%3e%3c/svg%3e") center right 1.75rem/calc(0.8em + 0.375rem) calc(0.8em + 0.375rem) no-repeat;
 }
 
 .was-validated .custom-select:invalid:focus,
 .custom-select.is-invalid:focus {
-  border-color: #be1c16;
-  box-shadow: 0 0 0 0.2rem rgba(190, 28, 22, 0.25);
+  border-color: #810c0c;
+  box-shadow: 0 0 0 0.2rem rgba(129, 12, 12, 0.25);
 }
 
 .was-validated .form-check-input:invalid ~ .form-check-label,
 .form-check-input.is-invalid ~ .form-check-label {
-  color: #be1c16;
+  color: #810c0c;
 }
 
 .was-validated .form-check-input:invalid ~ .invalid-feedback,
@@ -2530,39 +2530,39 @@ textarea.form-control.is-invalid {
 
 .was-validated .custom-control-input:invalid ~ .custom-control-label,
 .custom-control-input.is-invalid ~ .custom-control-label {
-  color: #be1c16;
+  color: #810c0c;
 }
 
 .was-validated .custom-control-input:invalid ~ .custom-control-label::before,
 .custom-control-input.is-invalid ~ .custom-control-label::before {
-  border-color: #be1c16;
+  border-color: #810c0c;
 }
 
 .was-validated .custom-control-input:invalid:checked ~ .custom-control-label::before,
 .custom-control-input.is-invalid:checked ~ .custom-control-label::before {
-  border-color: #e52922;
-  background-color: #e52922;
+  border-color: #b01010;
+  background-color: #b01010;
 }
 
 .was-validated .custom-control-input:invalid:focus ~ .custom-control-label::before,
 .custom-control-input.is-invalid:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 0.2rem rgba(190, 28, 22, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(129, 12, 12, 0.25);
 }
 
 .was-validated .custom-control-input:invalid:focus:not(:checked) ~ .custom-control-label::before,
 .custom-control-input.is-invalid:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #be1c16;
+  border-color: #810c0c;
 }
 
 .was-validated .custom-file-input:invalid ~ .custom-file-label,
 .custom-file-input.is-invalid ~ .custom-file-label {
-  border-color: #be1c16;
+  border-color: #810c0c;
 }
 
 .was-validated .custom-file-input:invalid:focus ~ .custom-file-label,
 .custom-file-input.is-invalid:focus ~ .custom-file-label {
-  border-color: #be1c16;
-  box-shadow: 0 0 0 0.2rem rgba(190, 28, 22, 0.25);
+  border-color: #810c0c;
+  box-shadow: 0 0 0 0.2rem rgba(129, 12, 12, 0.25);
 }
 
 .form-inline {
@@ -2889,43 +2889,43 @@ fieldset:disabled a.btn {
 
 .btn-danger {
   color: #fff;
-  background-color: #be1c16;
-  border-color: #be1c16;
+  background-color: #810c0c;
+  border-color: #810c0c;
 }
 
 .btn-danger:hover {
   color: #fff;
-  background-color: #9c1712;
-  border-color: #901511;
+  background-color: #5e0909;
+  border-color: #520808;
 }
 
 .btn-danger:focus,
 .btn-danger.focus {
   color: #fff;
-  background-color: #9c1712;
-  border-color: #901511;
-  box-shadow: 0 0 0 0.2rem rgba(200, 62, 57, 0.5);
+  background-color: #5e0909;
+  border-color: #520808;
+  box-shadow: 0 0 0 0.2rem rgba(148, 48, 48, 0.5);
 }
 
 .btn-danger.disabled,
 .btn-danger:disabled {
   color: #fff;
-  background-color: #be1c16;
-  border-color: #be1c16;
+  background-color: #810c0c;
+  border-color: #810c0c;
 }
 
 .btn-danger:not(:disabled):not(.disabled):active,
 .btn-danger:not(:disabled):not(.disabled).active,
 .show > .btn-danger.dropdown-toggle {
   color: #fff;
-  background-color: #901511;
-  border-color: #85140f;
+  background-color: #520808;
+  border-color: #470707;
 }
 
 .btn-danger:not(:disabled):not(.disabled):active:focus,
 .btn-danger:not(:disabled):not(.disabled).active:focus,
 .show > .btn-danger.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(200, 62, 57, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(148, 48, 48, 0.5);
 }
 
 .btn-light {
@@ -3191,24 +3191,24 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-danger {
-  color: #be1c16;
-  border-color: #be1c16;
+  color: #810c0c;
+  border-color: #810c0c;
 }
 
 .btn-outline-danger:hover {
   color: #fff;
-  background-color: #be1c16;
-  border-color: #be1c16;
+  background-color: #810c0c;
+  border-color: #810c0c;
 }
 
 .btn-outline-danger:focus,
 .btn-outline-danger.focus {
-  box-shadow: 0 0 0 0.2rem rgba(190, 28, 22, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(129, 12, 12, 0.5);
 }
 
 .btn-outline-danger.disabled,
 .btn-outline-danger:disabled {
-  color: #be1c16;
+  color: #810c0c;
   background-color: transparent;
 }
 
@@ -3216,14 +3216,14 @@ fieldset:disabled a.btn {
 .btn-outline-danger:not(:disabled):not(.disabled).active,
 .show > .btn-outline-danger.dropdown-toggle {
   color: #fff;
-  background-color: #be1c16;
-  border-color: #be1c16;
+  background-color: #810c0c;
+  border-color: #810c0c;
 }
 
 .btn-outline-danger:not(:disabled):not(.disabled):active:focus,
 .btn-outline-danger:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-danger.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(190, 28, 22, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(129, 12, 12, 0.5);
 }
 
 .btn-outline-light {
@@ -5469,19 +5469,19 @@ a.badge-warning.focus {
 
 .badge-danger {
   color: #fff;
-  background-color: #be1c16;
+  background-color: #810c0c;
 }
 
 a.badge-danger:hover,
 a.badge-danger:focus {
   color: #fff;
-  background-color: #901511;
+  background-color: #520808;
 }
 
 a.badge-danger:focus,
 a.badge-danger.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(190, 28, 22, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(129, 12, 12, 0.5);
 }
 
 .badge-light {
@@ -5637,17 +5637,17 @@ a.badge-dark.focus {
 }
 
 .alert-danger {
-  color: #630f0b;
-  background-color: #f2d2d0;
-  border-color: #edbfbe;
+  color: #430606;
+  background-color: #e6cece;
+  border-color: #dcbbbb;
 }
 
 .alert-danger hr {
-  border-top-color: #e7abaa;
+  border-top-color: #d3aaaa;
 }
 
 .alert-danger .alert-link {
-  color: #350806;
+  color: #140202;
 }
 
 .alert-light {
@@ -6066,20 +6066,20 @@ a.badge-dark.focus {
 }
 
 .list-group-item-danger {
-  color: #630f0b;
-  background-color: #edbfbe;
+  color: #430606;
+  background-color: #dcbbbb;
 }
 
 .list-group-item-danger.list-group-item-action:hover,
 .list-group-item-danger.list-group-item-action:focus {
-  color: #630f0b;
-  background-color: #e7abaa;
+  color: #430606;
+  background-color: #d3aaaa;
 }
 
 .list-group-item-danger.list-group-item-action.active {
   color: #fff;
-  background-color: #630f0b;
-  border-color: #630f0b;
+  background-color: #430606;
+  border-color: #430606;
 }
 
 .list-group-item-light {
@@ -7058,14 +7058,14 @@ button.bg-warning:focus {
 }
 
 .bg-danger {
-  background-color: #be1c16 !important;
+  background-color: #810c0c !important;
 }
 
 a.bg-danger:hover,
 a.bg-danger:focus,
 button.bg-danger:hover,
 button.bg-danger:focus {
-  background-color: #901511 !important;
+  background-color: #520808 !important;
 }
 
 .bg-light {
@@ -7159,7 +7159,7 @@ button.bg-dark:focus {
 }
 
 .border-danger {
-  border-color: #be1c16 !important;
+  border-color: #810c0c !important;
 }
 
 .border-light {
@@ -10780,12 +10780,12 @@ a.text-warning:focus {
 }
 
 .text-danger {
-  color: #be1c16 !important;
+  color: #810c0c !important;
 }
 
 a.text-danger:hover,
 a.text-danger:focus {
-  color: #79120e !important;
+  color: #3b0505 !important;
 }
 
 .text-light {
