--- a/public/css/common.css
+++ b/public/css/common.css
@@ -238,7 +238,7 @@ header .main-menu .menu-button a {
   text-align: center;
   border-radius: 50px;
   border: none;
-  box-shadow: inset 0 -2px 2px 0 #6c6c6c;
+  box-shadow: inset 0 -2px 2px 0 #303030;
 }
 
 .form form .btn input[type=submit]:hover {
