--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-wrap: wrap;
     width: 80%;
-    margin: 0 auto 100px;
+    margin: 0 auto;
     .content-ttl {
         width: 100%;
         margin: 50px 0 100px;
@@ -12,6 +12,13 @@
     }
     .left {
         width: 50%;
+        .img-content {
+            img {
+                width: 300px;
+                height: 300px;
+                object-fit: cover;
+            }
+        }
     }
     .right {
         width: 50%;
@@ -23,33 +30,186 @@
     .text {
         font-size: 2em;
     }
+    &.spot-content {
+        align-items: center;
+        .right {
+            font-size: 1.5em;
+            .detail {
+                display: flex;
+                justify-content: flex-start;
+                p {
+                    width: 30%;
+                }
+            }
+        }
+    }
 }
 
 .btn-form {
     text-align: center;
     .btn-content {
+        margin: 50px 0;
         .btn {
             border-radius: 50px;
             font-weight: bold;
             margin: 0 10px;
             padding: 10px 50px;
+            width: 200px;
+            padding: 10px 0;
         }
         .edit-btn {
-            border: 1px solid $admin-btn-color;
-            box-shadow: inset 0 -2px 2px 0 #3b3b3b;
+            border: none;
+            box-shadow: inset 0 -2px 2px 0 #303030;
             &:hover {
-                background-color: $admin-btn-color;
+                background: $footer;
                 color: #fff;
             }
         }
         .delete-btn {
             border: 1px solid $red;
             color: $red;
-            box-shadow: inset 0 -2px 2px 0 #810c0c;
+            box-shadow: inset 0 -2px 2px 0 $red;
             &:hover {
                 background-color: $red;
                 color: #fff;
             }
         }
     }
+}
+
+.table {
+    margin-bottom: 50px;
+    tbody {
+        tr {
+            td {
+                vertical-align: middle;
+                img {
+                    width: 100px;
+                    height: 100px;
+                    object-fit: cover;
+                }
+            }
+        }
+    }
+}
+
+.content-top {
+    margin: 50px auto 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    .content-ttl {
+        margin: 0;
+        width: 100%;
+    }
+    .btn {
+        margin-top: 30px;
+        width: 200px;
+        padding: 10px 0;
+        text-align: center;
+        border-radius: 50px;
+        border: none;
+        box-shadow: inset 0 -2px 2px 0 #303030;
+        &:hover {
+            background: $footer;
+            color: #fff;
+        }
+    }
+}
+
+.dataTables_wrapper {
+    margin-bottom: 50px;
+}
+
+.paginate_button {
+    padding: 0 2px;
+}
+
+.add-form {
+    form {
+        width: 80%;
+        margin: 0 auto;
+        .form-content {
+            margin: 30px auto;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: flex-start;
+            input[type="text"], textarea {
+                width: 75%;
+                padding: 5px 10px;
+                font-size: 1.5em;
+            }
+            .address-content {
+                width: 75%;
+                input[type="text"] {
+                    font-size: 1.5em;
+                }
+                select {
+                    width: 75%;
+                    padding: 5px 10px;
+                    font-size: 1.5em;
+                }
+            }
+            label {
+                font-size: 1.5em;
+                font-weight: normal;
+                padding-right: 15px;
+                input[type="checkbox"] {
+                    margin-right: 5px;
+                }
+            }
+            .form-ttl {
+                font-size: 1.5em;
+                width: 15%;
+            }
+            .img-content {
+                width: 75%;
+                display: flex;
+                align-items: center;
+                .left {
+                    #preview {
+                        border: 0.5px solid #000;
+                        width: 200px;
+                        height: 200px;
+                        object-fit: cover;
+                    }
+                }
+            }
+            .form-checkbox {
+                width: 75%;
+            }
+        }
+        .btn {
+            text-align: center;
+            display: block;
+            input[type="submit"] {
+                margin-top: 30px;
+                width: 200px;
+                padding: 10px 0;
+                text-align: center;
+                border-radius: 50px;
+                border: none;
+                box-shadow: inset 0 -2px 2px 0 #303030;
+                &:hover {
+                    background: $footer;
+                    color: #fff;
+                }
+            }
+        }
+    }
+}
+
+.ui-autocomplete {
+    max-height: 100px;
+    overflow-y: scroll;
+}
+
+.red {
+    background-color: $red;
+    color: #fff;
+    font-size: 0.5em;
+    padding: 5px 10px;
+    margin-left: 10px;
+    border-radius: 5px;
 }
