--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -219,7 +219,7 @@ header {
                 text-align: center;
                 border-radius: 50px;
                 border: none;
-                box-shadow: inset 0 -2px 2px 0 #6c6c6c;
+                box-shadow: inset 0 -2px 2px 0 #303030;
                 &:hover {
                     background: $footer;
                     color: #fff;
